# PiCameraApp

./: CMakeLists.txt  ReadMe.md
python/: QTPicamera.py  picamera.py
src/: main.cpp
